correction of colors in dark mode

--- a/frontend/src/components/Board/styles.css
+++ b/frontend/src/components/Board/styles.css
@@ -126,9 +126,17 @@
     text-align: center;
     min-width: 80px;
     padding: 5px;
-    border-right: 1px solid #eee;
-    border-bottom: 1px solid #eee;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
     border-radius: 0 0 5px 0;
+}
+
+.timer-general[about='light'] {
+    border-color: lightgrey;
+}
+
+.timer-general[about='dark'] {
+    border-color: #212121;
 }
 
 .timer-step {
